# Creature-Grind-Tool

./: .env  .flake8  .gitignore  .pyproject.toml.swp  Makefile  dsadsadsa  f  pyproject.toml  readme.md
autos/: __init__.py  auto_up.py
src/creature_core/: settings.py
src/creature_core/adapter/: __init__.py  pyautogui_adapter.py  pyautogui_game_input.py  pytesseract_adapter.py
src/creature_core/controller/: __init__.py  auto_farm_controller.py
src/creature_core/domain/: exceptions.py  file_storage.py
src/creature_core/domain/adapter/: __init__.py  autogui.py  game_input.py  optical_recognition.py
src/creature_core/external_interfaces/: main.py
src/creature_core/external_interfaces/apps/: __init__.py  auto_farm.py
src/creature_core/image_storage/: __init__.py  pillow_image_storage.py
src/creature_core/use_case/: __init__.py  battle_mode.py  find_app_window.py  find_battle.py  first_party_creature_is_alive.py
src/tests/use_case/: test_first_party_pokemon_is_alive.py
